--- a/index.html
+++ b/index.html
@@ -160,8 +160,9 @@
 						// Create an array of typing text
 						const typingTexts = [
 						'Data Scientist  ',
+						'AI Researcher  ',
 						'Developer  ',
-						'AI/ML Student   ',
+						'ML Engineer',
 						];
 
 						// Create a function to display the typing animation for a given text
@@ -292,7 +293,7 @@
 						<div class="counter-wrap ftco-animate d-flex mt-md-3">
 							<div class="text">
 								<p class="mb-4">
-									<span class="number" data-number="5">0</span> <span>+</span>
+									<span class="number" data-number="5"></span> <span>+</span>
 									<span>&nbsp; Projects completed</span>
 								</p>
 								<p><a href="https://github.com/abhi-sathvika" class="btn btn-primary py-3 px-3">Github</a></p>
@@ -313,7 +314,7 @@
           <div class="col-md-10 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Resume</h1>
             <h2 class="mb-4">Resume</h2>
-            <p>Aspiring Data Scientist | AI Enthusiast | UC San Diego Student | Passionate About Real-World Data Solutions</p>
+            <p>Aspiring AI Engineer | Data Scientist | UC San Diego Student | Passionate About Real-World Data Solutions</p>
           </div>
         </div>
 
@@ -410,11 +411,21 @@
     			<div class="col-md-6">
     				<div class="resume-wrap ftco-animate">
     					<span class="date">Writing</span>
-    					<h2>Coming Soon!</h2>
-    					<span class="position">Hint: Diversity in Tech</span>
-    					<p class="mt-4"></p>
+    					<h2>3 Tips for First Year Students (University Edition)</h2>
+    					<span class="position">Linkdln</span>
+    					<p class="mt-4"><a href="https://www.linkedin.com/pulse/top-3-advice-first-year-students-abhi-sathvika-goriparthy-y18ue/?trackingId=c4AiUQvVTwK5htuGO7QL%2BA%3D%3D" class="btn btn-primary py-3 px-3">Read it Here!</a></p>
     				</div>
 				</div>
+
+				<div class="col-md-6">
+    				<div class="resume-wrap ftco-animate">
+    					<span class="date">Writing</span>
+    					<h2>Flip the Script on Your Interview Process</h2>
+    					<span class="position">Linkdln</span>
+    					<p class="mt-4"><a href="https://www.linkedin.com/pulse/3-tips-flip-script-your-interview-process-abhi-sathvika-goriparthy-dlucc/?trackingId=7X4nSnfRReqTJunCOrlUlA%3D%3D" class="btn btn-primary py-3 px-3">Read it Here!</a></p>
+    				</div>
+				</div>
+
     		</div>
 
     		<!-- <div class="row justify-content-center mt-5">
@@ -433,7 +444,7 @@
           <div class="col-md-7 heading-section text-center ftco-animate">
             <h1 class="big big-2">Projects</h1>
             <h2 class="mb-4">Projects</h2>
-            <p>AI | Machine Learning | NLP | Computer Vision | Full Stack</p>
+            <p>AI | Machine Learning | Data Science | NLP | Full Stack</p>
           </div>
         </div>
         <div class="row d-flex">
