--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/style.css">
 
+	<link rel="stylesheet" href="timestyle.css">
+
 
 
 <style>
@@ -323,7 +325,77 @@
 			<div class="underline"></div>
 		</div>
 		<br>
+
+		<!--NEW CODE++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++		-->
+
 		
+		<div class="timeline">
+			<div class="timeline-item">
+				<div class="timeline-content">
+					<span class="date">Cohere Commerce</span>
+					<h5>August 2024 - Present</h5>
+					<span class="position">AI/ML Intern</span>
+					<p class="mt-4">Building a recommendation system through Break Through Tech @UCLA AI Studio program
+						<ul>
+							<li>Built a recommendation model with guidance from CEO supporting 750+ brands through 2000+ retailer reviews</li>
+							<li>Selected from 3000+ applicants to participate in 12-month program with hands-on experience in NLP, CV, AI model life cycle</li>
+							<li>Earned a ML Foundations Certificate from Cornell through a rigorous 9-week Machine Learning curriculum curated by Cornell & UCLA Professors</li>
+						</ul>
+					</p>
+				</div>
+			</div>
+		
+			<div class="timeline-item">
+				<div class="timeline-content">
+					<span class="date">IBM Accelerate</span>
+					<h5>June 2024 - July 2024</h5>
+					<span class="position">Client Engineering and Technical Sales Extern</span>
+					<p class="mt-4">IBM providing valuable skills as problem-solving, leadership, mentorship, and client presentations to students
+						<ul>
+							<li>Developed a chatbot using IBM WatsonX.AI to perform insurance account management, payments, and track plan benefits</li>
+							<li>Solved business requirements and client needs, reducing call-center workload by 40% with 500 daily customer queries</li>
+							<li>Written a comprehensive article on Medium reaching 50+ people about program & impact, to guide and lead future applicants</li>
+						</ul>
+					</p>
+				</div>
+			</div>
+		
+			<div class="timeline-item">
+				<div class="timeline-content">
+					<span class="date">Alama AI x DS3 Consulting</span>
+					<h5>April 2024 - June 2024</h5>
+					<span class="position">Machine Learning Consultant</span>
+					<p class="mt-4">Alama AI is an innovative startup specializing AI Chatbots to enhance student experience with University Advising Systems.
+						<ul>
+							<li>Developed an advanced chatbot using ChatGPT 3.5 API for improved conversational capabilities, integrated Retrieval-Augmented Generation (RAG) enhancing response accuracy by 30% and relevance by utilizing LangChain helping 350+ students</li>
+							<li>Collaborated with startup Alama AI's founders, ML engineers, and my DS3 consulting team to align chatbot development with company goals curating a detailed and comprehensive MVP in 8 weeks</li>
+						</ul>
+					</p>
+				</div>
+			</div>
+		</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+		<!--
 		<div class="row">
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
@@ -371,6 +443,7 @@
 
 				</div>
 
+				-->
 
 				<!-- <div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
